tests/conformance/typecheck/invalid/mutual_recursion_unify_conflict.ks
// EXPECT: Cannot unify
fun f(x: Int): String = g(x)
fun g(x: Int): Int = f(x)
